--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "canvas": "^2.11.2",
+    "data-uri-to-buffer": "^6.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
